  NumberField refactored a bit
  NumberField refactored further, now skips over grouping separator on backspace and delete
  EntityTestUnit.getConditions() added
  DatabaseUtil removed, methods moved to Databases and DefaultDatabaseConnection
  Databases.createInstance() removed
  Configuration.ConfigurationValue no longer public
  Util.require() removed, Objects.requireNonNull() used instead
  Util.map() now uses computeIfAbsent()
  DefaultEntityConnectionServer, web server removed, auxiliary servers added
  Jetty plugin module added, split from rest plugin
  Entities.getDomainID() added, now uses the simple class name for domain ids
  EntityRESTService, added domainID parameter to api
  EmpDeptRESTLoadTest updated accordingly
  ExceptionUtil removed
  EntityJSONParser refactored, now uses ThreadLocal date formats
  JettyServer, logging added
  Major cosmetic surgery, entityID, propertyID and domainID changed to entityId, propertyId and domainId respectively, all IDs replaced with Ids
  db-http module added
  EntityRESTService assumes parameters are base64 encoded byte array, now uses EntityConditions, api simplified
  DefaultHttpEntityConnection, almost fully implemented
  DefaultHttpEntityConnection, EntityRESTService, exception handling improved, refactored
  DefaultHttpEntityConnection renamed to HttpEntityConnection
  EntityRESTService, clientTypeId is now a required header
  HttpEntityConnection and EntityRESTService no longer wrap parameters and results in a List
  Util.serializeAndBase64Encode() removed superfluous generic parameter
  HttpEntityConnection and EntityConditions, added a few null checks
  EntityRESTService now handles changing clientIds
  HttpEntityConnection, some refactoring
  Jetty plugin promoted into common-server-http module
  Preparing rest module for promotion to framework-servlet module, continued, and continued
  Rest module promoted to framework-servlet