@@ -11,24 +11,24 @@ import org.eclipse.jetty.servlet.ServletHolder;
 import org.glassfish.jersey.servlet.ServletContainer;
 
 /**
- * A simple Jetty/Jersey based REST server
+ * A Entity servlet server
  */
-public final class EntityRESTServer extends HttpServer {
+public final class EntityServletServer extends HttpServer {
 
   /**
-   * Instantiates a new EntityRESTServer.
+   * Instantiates a new EntityServletServer.
    * @param connectionServer the Server serving the connection requests
    * @see JettyServer#DOCUMENT_ROOT
    * @see Server#WEB_SERVER_PORT
    */
-  public EntityRESTServer(final org.jminor.common.server.Server connectionServer) {
+  public EntityServletServer(final org.jminor.common.server.Server connectionServer) {
     super(connectionServer, HttpServer.DOCUMENT_ROOT.get(), Server.WEB_SERVER_PORT.get());
-    EntityRESTService.setServer(connectionServer);
+    EntityServlet.setServer(connectionServer);
     final ServletContextHandler servletHandler = new ServletContextHandler(ServletContextHandler.SESSIONS);
     servletHandler.setContextPath("/");
     final ServletHolder holder = servletHandler.addServlet(ServletContainer.class, "/entities/*");
     holder.setInitOrder(0);
-    holder.setInitParameter("jersey.config.server.provider.classnames", EntityRESTService.class.getCanonicalName());
+    holder.setInitParameter("jersey.config.server.provider.classnames", EntityServlet.class.getCanonicalName());
     addHandler(servletHandler);
   }
 
@@ -36,6 +36,6 @@ public final class EntityRESTServer extends HttpServer {
   @Override
   public void stopServer() throws Exception {
     super.stopServer();
-    EntityRESTService.setServer(null);
+    EntityServlet.setServer(null);
   }
 }
