@@ -4620,3 +4620,4 @@
   Jetty plugin promoted into common-server-http module
   Preparing rest module for promotion to framework-servlet module, continued, and continued
   Rest module promoted to framework-servlet
+  EntityRESTService renamed to EntityServlet and EntityRESTServer renamed to EntityServletServer
